<resources>
    <string name="app_name">Sketchware Pro</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="besome_blog_url">http://medium.com/sketchware</string>
    <string name="block_add_list_int_body_1">to</string>
    <string name="block_add_list_int_head">add</string>
    <string name="block_add_list_int_tail" />
    <string name="block_add_list_map_body_1">value</string>
    <string name="block_add_list_map_body_2">to</string>
    <string name="block_add_list_map_head">add key</string>
    <string name="block_add_list_map_tail" />
    <string name="block_add_list_str_body_1">to</string>
    <string name="block_add_list_str_head">add</string>
    <string name="block_add_list_str_tail" />
    <string name="block_add_map_to_list_body_1">to</string>
    <string name="block_add_map_to_list_head">add</string>
    <string name="block_add_map_to_list_tail" />
    <string name="block_add_source_directly_head">add source directly</string>
    <string name="block_add_source_directly_tail" />
    <string name="block_adview_load_ad_head" />
    <string name="block_adview_load_ad_tail">load</string>
    <string name="block_and_body_1">and</string>
    <string name="block_and_head" />
    <string name="block_and_tail" />
    <string name="block_bigger_body_1">></string>
    <string name="block_bigger_head" />
    <string name="block_bigger_tail" />
    <string name="block_bluetoothconnect_activate_bluetooth_head" />
    <string name="block_bluetoothconnect_activate_bluetooth_tail">activate bluetooth</string>
    <string name="block_bluetoothconnect_get_paired_devices_body_1">get paired devices to</string>
    <string name="block_bluetoothconnect_get_paired_devices_head" />
    <string name="block_bluetoothconnect_get_paired_devices_tail" />
    <string name="block_bluetoothconnect_get_random_uuid_head" />
    <string name="block_bluetoothconnect_get_random_uuid_tail">get random uuid</string>
    <string name="block_bluetoothconnect_is_bluetooth_activated_head" />
    <string name="block_bluetoothconnect_is_bluetooth_activated_tail">is bluetooth activated</string>
    <string name="block_bluetoothconnect_is_bluetooth_enabled_head" />
    <string name="block_bluetoothconnect_is_bluetooth_enabled_tail">is bluetooth enabled</string>
    <string name="block_bluetoothconnect_ready_connection_body_1">ready connection with tag</string>
    <string name="block_bluetoothconnect_ready_connection_head" />
    <string name="block_bluetoothconnect_ready_connection_tail" />
    <string name="block_bluetoothconnect_ready_connection_to_uuid_body_1">ready connection to uuid</string>
    <string name="block_bluetoothconnect_ready_connection_to_uuid_body_2">with tag</string>
    <string name="block_bluetoothconnect_ready_connection_to_uuid_head" />
    <string name="block_bluetoothconnect_ready_connection_to_uuid_tail" />
    <string name="block_bluetoothconnect_send_data_body_1">send data</string>
    <string name="block_bluetoothconnect_send_data_body_2">with tag</string>
    <string name="block_bluetoothconnect_send_data_head" />
    <string name="block_bluetoothconnect_send_data_tail" />
    <string name="block_bluetoothconnect_start_connection_body_1">start connection to address</string>
    <string name="block_bluetoothconnect_start_connection_body_2">with tag</string>
    <string name="block_bluetoothconnect_start_connection_head" />
    <string name="block_bluetoothconnect_start_connection_tail" />
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_1">start connection to uuid</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_2">and address</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_body_3">with tag</string>
    <string name="block_bluetoothconnect_start_connection_to_uuid_head" />
    <string name="block_bluetoothconnect_start_connection_to_uuid_tail" />
    <string name="block_bluetoothconnect_stop_connection_body_1">stop connection with tag</string>
    <string name="block_bluetoothconnect_stop_connection_head" />
    <string name="block_bluetoothconnect_stop_connection_tail" />
    <string name="block_break_head">stop</string>
    <string name="block_break_tail" />
    <string name="block_calendar_add_body_1">add</string>
    <string name="block_calendar_add_body_2">value</string>
    <string name="block_calendar_add_head" />
    <string name="block_calendar_add_tail" />
    <string name="block_calendar_diff_body_1">-</string>
    <string name="block_calendar_diff_head">Difference</string>
    <string name="block_calendar_diff_tail" />
    <string name="block_calendar_format_body_1">Format</string>
    <string name="block_calendar_format_head" />
    <string name="block_calendar_format_tail" />
    <string name="block_calendar_get_now_head" />
    <string name="block_calendar_get_now_tail">getNow</string>
    <string name="block_calendar_get_time_head" />
    <string name="block_calendar_get_time_tail">getTime(ms)</string>
    <string name="block_calendar_set_body_1">set</string>
    <string name="block_calendar_set_body_2">value</string>
    <string name="block_calendar_set_head" />
    <string name="block_calendar_set_tail" />
    <string name="block_calendar_set_time_body_1">setTime</string>
    <string name="block_calendar_set_time_head" />
    <string name="block_calendar_set_time_tail">ms</string>
    <string name="block_calendarview_get_date_head" />
    <string name="block_calendarview_get_date_tail">getDate(ms)</string>
    <string name="block_calendarview_set_date_body_1">setDate</string>
    <string name="block_calendarview_set_date_head" />
    <string name="block_calendarview_set_date_tail">ms</string>
    <string name="block_calendarview_set_max_date_body_1">setMaxDate</string>
    <string name="block_calendarview_set_max_date_head" />
    <string name="block_calendarview_set_max_date_tail">ms</string>
    <string name="block_calendarview_set_min_date_body_1">setMinDate</string>
    <string name="block_calendarview_set_min_date_head" />
    <string name="block_calendarview_set_min_date_tail">ms</string>
    <string name="block_camera_start_take_picture_head" />
    <string name="block_camera_start_take_picture_tail">take picture</string>
    <string name="block_category_component_func">Component</string>
    <string name="block_category_control">Control</string>
    <string name="block_category_file">File</string>
    <string name="block_category_list">List</string>
    <string name="block_category_math">Math</string>
    <string name="block_category_moreblock">More Block</string>
    <string name="block_category_operator">Operator</string>
    <string name="block_category_var">Variable</string>
    <string name="block_category_view_func">View</string>
    <string name="block_clear_list_head">clear</string>
    <string name="block_clear_list_tail" />
    <string name="block_close_drawer_head">closeDrawer</string>
    <string name="block_close_drawer_tail" />
    <string name="block_contain_list_int_body_1">contains</string>
    <string name="block_contain_list_int_head" />
    <string name="block_contain_list_int_tail" />
    <string name="block_contain_list_map_body_1">contains at</string>
    <string name="block_contain_list_map_body_2">key</string>
    <string name="block_contain_list_map_head" />
    <string name="block_contain_list_map_tail" />
    <string name="block_contain_list_str_body_1">contains</string>
    <string name="block_contain_list_str_head" />
    <string name="block_contain_list_str_tail" />
    <string name="block_copy_to_clipboard_head">copyToClipboard</string>
    <string name="block_copy_to_clipboard_tail" />
    <string name="block_crop_bitmap_center_body_1">to path</string>
    <string name="block_crop_bitmap_center_body_2">width</string>
    <string name="block_crop_bitmap_center_body_3">height</string>
    <string name="block_crop_bitmap_center_head">crop image center from path</string>
    <string name="block_crop_bitmap_center_tail" />
    <string name="block_decrease_int_head" />
    <string name="block_decrease_int_tail">decrease 1</string>
    <string name="design_library_appcompat_description">Activating App Compat library will let you add Drawer Layout and Floating Action Button to the Activities.</string>
    <string name="design_library_message_slow_down_compilation_time">Including the library may slow down the compilation time on certain devices.</string>
    <string name="design_library_settings_title_enabled">Enabled</string>
    <string name="developer_tools_component_description_guide_add_component">"If you add a component here
 You can use it in Logic Editor"</string>
    <string name="developer_tools_component_manager">Component manager</string>
    <string name="local_library_manager">Local library Manager</string>
    <string name="local_library_manager_download">Download a library</string>
    <string name="local_library_manager_no_libraries_title">No Local libraries available</string>
    <string name="local_library_manager_no_libraries_body">You don\'t have any Local libraries yet, try downloading one.</string>
    <string name="follow_system">Follow System</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="language_settings">Language Settings</string>
    <string name="no_component_available">No Component available</string>
    <string name="word_wrap">Word wrap</string>
    <string name="pretty_print">Pretty print</string>
    <string name="switch_language">Switch language</string>
    <string name="switch_theme">Switch theme</string>
    <string name="auto_complete">Auto complete</string>
    <string name="auto_complete_symbol_pair">Auto complete symbol pair</string>
    <string name="paste">Paste</string>
    <string name="backup_filename_format">Backup filename format</string>
    <string name="built_in_blocks">Built-in blocks</string>
    <string name="may_slow_down_loading_blocks_in_logic_editor">May slow down loading blocks in Logic Editor.</string>
    <string name="show_all_variable_blocks">Show all variable blocks</string>
    <string name="all_variable_blocks_will_be_visible">All variable blocks will be visible, even if you don\'t have variables for them.</string>
    <string name="show_all_blocks_of_palettes">Show all blocks of palettes</string>
    <string name="every_single_available_block_will_be_shown">Every single available block will be shown. Will slow down opening palettes!</string>
    <string name="backup_directory">Backup directory</string>
    <string name="the_default_directory">The default directory is /Internal storage/.sketchware/backups/.</string>
    <string name="install_projects_with_root_access">Install projects with root access</string>
    <string name="automatically_installs_project_apks">Automatically installs project APKs after building using root access.</string>
    <string name="launch_projects_after_installing">Launch projects after installing</string>
    <string name="opens_projects_automatically">Opens projects automatically after auto-installation using root.</string>
    <string name="use_new_version_control">Use new Version Control</string>
    <string name="enables_custom_version_code_and_name_for_projects">Enables custom version code and name for projects.</string>
    <string name="enable_block_text_input_highlighting">Enable block text input highlighting</string>
    <string name="enables_syntax_highlighting_while_editing_blocks_text_parameters">Enables syntax highlighting while editing blocks\' text parameters.</string>
    <string name="default_is_projectname_v_versionname_pkgname_versioncode_time">Default is \"$projectName v$versionName ($pkgName, $versionCode) $time(yyyy-MM-dd\'T\'HHmmss)\"</string>
    <string name="sketchware_language">Sketchware Language</string>
</resources>