<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="built-in-blocks"
        app:summary="@string/may_slow_down_loading_blocks_in_logic_editor"
        app:title="@string/built_in_blocks" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="always-show-blocks"
        app:summary="@string/all_variable_blocks_will_be_visible"
        app:title="@string/show_all_variable_blocks" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="show-every-single-block"
        app:summary="@string/every_single_available_block_will_be_shown"
        app:title="@string/show_all_blocks_of_palettes" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="backup-dir"
        app:summary="@string/the_default_directory"
        app:title="@string/backup_directory" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="root-auto-install-projects"
        app:summary="@string/automatically_installs_project_apks"
        app:title="@string/install_projects_with_root_access" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="root-auto-open-after-installing"
        app:summary="@string/opens_projects_automatically"
        app:title="@string/launch_projects_after_installing" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="use-new-version-control"
        app:summary="@string/enables_custom_version_code_and_name_for_projects"
        app:title="@string/use_new_version_control" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="use-asd-highlighter"
        app:summary="@string/enables_syntax_highlighting_while_editing_blocks_text_parameters"
        app:title="@string/enable_block_text_input_highlighting" />

    <Preference
        app:iconSpaceReserved="false"
        app:key="backup-filename"
        app:summary="@string/default_is_projectname_v_versionname_pkgname_versioncode_time"
        app:title="@string/backup_filename_format" />
</PreferenceScreen>
