<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:title="Undo"
        android:icon="@drawable/ic_mtrl_undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_redo"
        android:title="Redo"
        android:icon="@drawable/ic_mtrl_redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_paste"
        android:title="@string/paste"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_word_wrap"
        android:checkable="true"
        android:title="@string/word_wrap"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pretty_print"
        android:title="@string/pretty_print"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_switch_language"
        android:title="@string/switch_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_switch_theme"
        android:title="@string/switch_theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_autocomplete"
        android:checkable="true"
        android:title="@string/auto_complete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_autocomplete_symbol_pair"
        android:checkable="true"
        android:title="@string/auto_complete_symbol_pair"
        app:showAsAction="never" />

</menu>

