<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/layout_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_enable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/scolor_red_02"
                android:textSize="14sp"
                tools:text="@string/design_library_settings_title_enabled" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/lib_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="8dp"
                android:clickable="false"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/lib_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="8dp"
                android:padding="4dp"
                android:src="@drawable/connected_96"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textColor="#ff757575"
                android:textSize="14sp"
                tools:text="@string/design_library_appcompat_description" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:padding="8dp"
            android:textColor="@color/scolor_red_01"
            android:textSize="12sp"
            tools:text="@string/design_library_message_slow_down_compilation_time" />
    </LinearLayout>
</LinearLayout>
